added padding to the row of pictures

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
     <main class="container">
         <h1></h1>
-        <div class="row">
+        <div class="row px-2">
             <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
                 <img class="landing-page-images" src="/img/first-screenshot.png">
             </div>
