mobile and normal view working

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -19,10 +19,12 @@
     width: 100%;
     height: auto;
     display: block;
+}
 
-    /*max-width: 480px;*/
-    /*max-height: 480px;*/
-    /*width: auto;*/
-    /*height: auto;*/
-    /*display: block;*/
+.landing-page-images-mobile {
+    max-width: 480px;
+    max-height: 480px;
+    width: auto;
+    height: auto;
+    display: block;
 }
