--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,11 @@
                 <img class="landing-page-images" src="/img/second-screenshot.png">
             </div>
         </div>
+        <div class="row px-2">
+            <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
+                <img class="landing-page-images-mobile" src="/img/IMG_0553.png">
+            </div>
+        </div>
 
     </main>
 
