--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,15 +8,21 @@
     <header th:replace="~{partials/partials :: header('Task Manager')}"></header>
 
     <main class="container">
-        <h1></h1>
         <div class="row px-2">
             <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
-                <img class="landing-page-images" src="/img/first-screenshot.png">
+                <div class="image-container">
+                    <span>Gain control through the Task-Hub</span>
+                    <img class="landing-page-images" src="/img/first-screenshot.png">
+                </div>
             </div>
             <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
-                <img class="landing-page-images" src="/img/second-screenshot.png">
+                <div class="image-container">
+                    <span>Make it your own</span>
+                    <img class="landing-page-images" src="/img/second-screenshot.png">
+                </div>
             </div>
         </div>
+<!--        THE LAST SECTION START-->
         <div class="row px-2">
             <div class="col-md-3 d-flex justify-content-center mt-5 border-bottom">
                 <img class="landing-page-images-mobile" src="/img/IMG_0553.png">
@@ -25,10 +31,10 @@
                 <img class="landing-page-images-mobile" src="/img/IMG-0554.PNG">
             </div>
             <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
-                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet dolorem harum illo incidunt molestiae, qui tempore. Accusamus architecto asperiores aspernatur dolores enim et magnam molestiae perferendis provident quaerat, vero.</span><span>Accusantium ad aperiam beatae blanditiis, cum, cupiditate deleniti doloribus excepturi, facilis id iste itaque labore mollitia placeat porro quos tempora voluptatem. A autem in nihil, praesentium quae quaerat quas quasi?</span></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet dolorem harum illo incidunt molestiae, qui tempore. Accusamus architecto asperiores aspernatur dolores enim et magnam molestiae perferendis provident quaerat, vero.Accusantium ad aperiam beatae blanditiis, cum, cupiditate deleniti doloribus excepturi, facilis id iste itaque labore mollitia placeat porro quos tempora voluptatem. A autem in nihil, praesentium quae quaerat quas quasi?</p>
             </div>
         </div>
-
+<!--        THE LAST SECTION END-->
     </main>
 
     <footer th:replace="~{partials/partials :: footer}"></footer>
