--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-<!--        THE LAST SECTION START-->
+        <!--        THE LAST SECTION START-->
         <div class="row px-2">
             <div class="col-md-3 d-flex justify-content-center mt-5 border-bottom">
                 <img class="landing-page-images-mobile" src="/img/IMG_0553.png">
@@ -31,11 +31,56 @@
                 <img class="landing-page-images-mobile" src="/img/IMG-0554.PNG">
             </div>
             <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
-                <p>Task Manager is designed to allow you to streamline your workflow and stay organized.  There are a variety of features; including a kanban board like-experience, which allows you to stay organized from an "In Progress" task to a "Complete" task.  The goal is to help you manage your "...tasks...projects...goals...etc..." with ease, organization, and structure.  There are a variety of features to help you manage each task.  <br>The user-friendly interface and task-oriented management features enable you to complete your <span class=" font-weight-bold badge bg-warning rounded pill">To-Do's</span> to <span class=" font-weight-bold badge bg-success rounded pill">To-Done's</span>  quicker than ever.  Whether you're a business owner, freelancer, or just looking to stay organized, Task Manager will boost your efficiency and reduce the feeling of being overwhelmed.
+                <p>Task Manager is designed to allow you to streamline your workflow and stay organized. There are a
+                    variety of features; including a kanban board like-experience, which allows you to stay organized
+                    from an "In Progress" task to a "Complete" task. The goal is to help you manage your
+                    "...tasks...projects...goals...etc..." with ease, organization, and structure. There are a variety
+                    of features to help you manage each task. <br>The user-friendly interface and task-oriented
+                    management features enable you to complete your <span
+                            class=" font-weight-bold badge bg-warning rounded pill">To-Do's</span> to <span
+                            class=" font-weight-bold badge bg-success rounded pill">To-Done's</span> quicker than ever.
+                    Whether you're a business owner, freelancer, or just looking to stay organized, Task Manager will
+                    boost your efficiency and reduce the feeling of being overwhelmed.
                 </p>
             </div>
         </div>
-<!--        THE LAST SECTION END-->
+        <!--        THE LAST SECTION END-->
+
+
+        <div class="row px-2 d-flex justify-content-center">
+            <!--        About me START-->
+            <div class="col-md-6">
+                <div class="accordion" id="meetTheDev">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDev" aria-expanded="false" aria-controls="collapseDev">
+                                Meet The Developer
+                            </button>
+                        </h2>
+                        <div id="collapseDev" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#meetTheDev">
+                            <div class="accordion-body">
+                                <ul class="list-group">
+                                    <li class="d-flex justify-content-center">
+                                        <img src="/img/cesar-image.jpg" id="dev-picture">
+                                    </li>
+                                    <li class="list-group-item list-group-item-light text-center">Cesar Vallin</li>
+                                    <li class="list-group-item list-group-item-light text-center">
+                                        <a href="https://github.com/CesarVallin" target="_blank">GitHub</a>
+                                    </li>
+                                    <li class="list-group-item list-group-item-light text-center">
+                                        <a href="https://www.linkedin.com/in/cesar-vallin/" target="_blank">LinkedIn</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <!--        ABOUT me END-->
+        </div>
+
     </main>
 
     <footer th:replace="~{partials/partials :: footer}"></footer>
