--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,11 +33,11 @@
             <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
                 <p>Task Manager is designed to allow you to streamline your workflow and stay organized. There are a
                     variety of features; including a kanban board like-experience, which allows you to stay organized
-                    from an "In Progress" task to a "Complete" task. The goal is to help you manage your
-                    "...tasks...projects...goals...etc..." with ease, organization, and structure. There are a variety
+                    from an "In Progress" task to a "Complete" task. <br>The goal is to help you manage your
+                    "tasks, projects, goals, etc..." ... with ease, organization, and structure. There are a variety
                     of features to help you manage each task. <br>The user-friendly interface and task-oriented
                     management features enable you to complete your <span
-                            class=" font-weight-bold badge bg-warning rounded pill">To-Do's</span> to <span
+                            class=" font-weight-bold badge bg-warning rounded pill">To-Do's</span> into <span
                             class=" font-weight-bold badge bg-success rounded pill">To-Done's</span> quicker than ever.
                     Whether you're a business owner, freelancer, or just looking to stay organized, Task Manager will
                     boost your efficiency and reduce the feeling of being overwhelmed.
