completed bio about me

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,6 +70,9 @@
                                     <li class="list-group-item list-group-item-light text-center">
                                         <a href="https://www.linkedin.com/in/cesar-vallin/" target="_blank">LinkedIn</a>
                                     </li>
+                                    <li class="list-group-item list-group-item-light text-center">
+                                        <span>I believe that the best line of code is the one that becomes a tool for you. <br> "Be the inexhaustible energy that seeks improvement"</span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
