stagered landing page complete

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,43 +8,64 @@
     <header th:replace="~{partials/partials :: header('Task Manager')}"></header>
 
     <main class="container">
-        <div class="row px-2">
-            <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
+<!--        FIRST SECTION START -->
+        <div class="row px-2 border-bottom">
+            <div class="col-md-6 d-flex justify-content-center mt-5">
                 <div class="image-container">
                     <span>Gain control through the Task-Hub</span>
                     <img class="landing-page-images" src="/img/first-screenshot.png">
                 </div>
             </div>
-            <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
+            <div class="col-md-6 d-flex justify-content-center mt-5">
+                <div class="d-flex align-items-center">
+                    <span>Task Manager is designed to allow you to streamline your workflow and stay organized. There are a
+                        variety of features; including a kanban board like-experience, which allows you to stay organized
+                        from an "In Progress" task to a "Complete" task.</span>
+                </div>
+            </div>
+        </div>
+<!--        FIRST SECTION END -->
+<!--        SECOND SECTION START-->
+        <div class="row px-2 border-bottom">
+            <div class="col-md-6 d-flex justify-content-center mt-5">
+                <div class="d-flex align-items-center">
+                    <span>
+                        The goal is to help you manage your
+                    "tasks, projects, goals, etc..." ... with ease, organization, and structure. There are a variety
+                    of features to help you manage each task. <br>The user-friendly interface and task-oriented
+                    management features enable you to complete your <span
+                            class=" font-weight-bold badge bg-warning rounded pill">To-Do's</span> into <span
+                            class=" font-weight-bold badge bg-success rounded pill">To-Done's</span> quicker than ever.
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-6 d-flex justify-content-center mt-5">
                 <div class="image-container">
                     <span>Make it your own</span>
                     <img class="landing-page-images" src="/img/second-screenshot.png">
                 </div>
             </div>
         </div>
-        <!--        THE LAST SECTION START-->
-        <div class="row px-2">
-            <div class="col-md-3 d-flex justify-content-center mt-5 border-bottom">
+<!--        SECOND SECTION END-->
+
+<!--        THIRD SECTION START -->
+        <div class="row px-2 border-bottom">
+            <div class="col-md-3 d-flex justify-content-center mt-5">
                 <img class="landing-page-images-mobile" src="/img/IMG_0553.png">
             </div>
-            <div class="col-md-3 d-flex justify-content-center mt-5 border-bottom">
+            <div class="col-md-3 d-flex justify-content-center mt-5">
                 <img class="landing-page-images-mobile" src="/img/IMG-0554.PNG">
             </div>
-            <div class="col-md-6 d-flex justify-content-center mt-5 border-bottom">
-                <p>Task Manager is designed to allow you to streamline your workflow and stay organized. There are a
-                    variety of features; including a kanban board like-experience, which allows you to stay organized
-                    from an "In Progress" task to a "Complete" task. <br>The goal is to help you manage your
-                    "tasks, projects, goals, etc..." ... with ease, organization, and structure. There are a variety
-                    of features to help you manage each task. <br>The user-friendly interface and task-oriented
-                    management features enable you to complete your <span
-                            class=" font-weight-bold badge bg-warning rounded pill">To-Do's</span> into <span
-                            class=" font-weight-bold badge bg-success rounded pill">To-Done's</span> quicker than ever.
-                    Whether you're a business owner, freelancer, or just looking to stay organized, Task Manager will
-                    boost your efficiency and reduce the feeling of being overwhelmed.
-                </p>
+            <div class="col-md-6 d-flex justify-content-center mt-5">
+                <div class="d-flex align-items-center">
+                    <span>
+                        Whether you're a business owner, freelancer, or just looking to stay organized, Task Manager will
+                        boost your efficiency and reduce the feeling of being overwhelmed.
+                    </span>
+                </div>
             </div>
         </div>
-        <!--        THE LAST SECTION END-->
+<!--        THIRD SECTION END -->
 
 
         <div class="row px-2 d-flex justify-content-center">
