--- a/src/main/resources/templates/profile/profile-index.html
+++ b/src/main/resources/templates/profile/profile-index.html
@@ -123,7 +123,7 @@
                                             </button>
                                         </form>
                                         <div>
-                                            <a th:href="@{|/task/edit/${task.id}|}">Edit Task</a>
+                                            <a th:href="@{|/task/edit/${task.id}|}" class="btn btn-outline-secondary">Edit Task</a>
                                         </div>
                                     </div>
                                 </div>
@@ -206,7 +206,7 @@
                                             </button>
                                         </form>
                                         <div>
-                                            <a th:href="@{|/task/edit/${task.id}|}">Edit Task</a>
+                                            <a th:href="@{|/task/edit/${task.id}|}" class="btn btn-outline-secondary">Edit Task</a>
                                         </div>
                                     </div>
                                 </div>
