Footer on partials contains all contact info

--- a/src/main/resources/templates/partials/partials.html
+++ b/src/main/resources/templates/partials/partials.html
@@ -114,9 +114,24 @@
 </header>
 
 <footer class="bg-dark mt-5" th:fragment="footer">
-    <div class="container d-flex align-items-center justify-content-center py-4 ">
-        <span class="dog-face"></span>
-        <span class="font-italic text-light" id="random-dog-fact"></span>
+    <div class="container d-flex align-items-center justify-content-center py-4">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6 d-flex justify-content-center">
+                <div class="d-flex align-items-center">
+                    <span class="text-light">Cesar Vallin</span>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="d-flex align-items-center">
+                    <a href="https://github.com/CesarVallin" target="_blank" class="text-light">GitHub</a>
+                </div>
+            </div>
+            <div class="col-md-3 d-flex justify-content-center">
+                <div class="d-flex align-items-center">
+                    <a href="https://www.linkedin.com/in/cesar-vallin/" target="_blank" class="text-light">LinkedIn</a>
+                </div>
+            </div>
+        </div>
     </div>
 </footer>
 
