first and second section pictures complete

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
             <div class="col-md-6 d-flex justify-content-center mt-5">
                 <div class="image-container">
                     <span>Gain control through the Task-Hub</span>
-                    <img class="landing-page-images" src="/img/first-screenshot.png">
+                    <img class="landing-page-images" src="/img/first-section1.png">
                 </div>
             </div>
             <div class="col-md-6 d-flex justify-content-center mt-5">
@@ -42,7 +42,7 @@
             <div class="col-md-6 d-flex justify-content-center mt-5">
                 <div class="image-container">
                     <span>Make it your own</span>
-                    <img class="landing-page-images" src="/img/second-screenshot.png">
+                    <img class="landing-page-images" src="/img/second-section.png">
                 </div>
             </div>
         </div>
