--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,31 @@
 <!--        THIRD SECTION START -->
         <div class="row px-2 border-bottom">
             <div class="col-md-3 d-flex justify-content-center mt-5">
-                <img class="landing-page-images-mobile" src="/img/IMG-0559.PNG">
+
+                <div class="marvel-device iphone-x landing-page-images-mobile-phone-overlay">
+<!--                    <div class="notch">-->
+<!--                        <div class="camera"></div>-->
+<!--                        <div class="speaker"></div>-->
+<!--                    </div>-->
+                    <div class="top-bar"></div>
+                    <div class="sleep"></div>
+                    <div class="bottom-bar"></div>
+                    <div class="volume"></div>
+                    <div class="overflow">
+                        <div class="shadow shadow--tr"></div>
+                        <div class="shadow shadow--tl"></div>
+                        <div class="shadow shadow--br"></div>
+                        <div class="shadow shadow--bl"></div>
+                    </div>
+                    <div class="inner-shadow"></div>
+                    <div class="screen">
+                        <!-- Content goes here -->
+                        <img class="landing-page-images-mobile" src="/img/IMG-0559.PNG">
+
+                    </div>
+                </div>
+
+<!--                <img class="landing-page-images-mobile" src="/img/IMG-0559.PNG">-->
             </div>
             <div class="col-md-3 d-flex justify-content-center mt-5">
                 <img class="landing-page-images-mobile" src="/img/IMG-0561.PNG">
